--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     inputField = document.querySelector('input');
     button = document.querySelector('button');
     answer = document.querySelector('#result');
-    requestUrl = "http://211.184.190.195:4000/phoneme"
+    requestUrl = "211.184.190.195:4000/phoneme"
 
     button.addEventListener('click', function() {
         if (inputField.value != "") {
