--- a/index.html
+++ b/index.html
@@ -5,34 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RaonData G2P</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-
 </head>
 <body>
-    <input type="text">
-    <button>변환</button>
-    <p id="result">변환 결과가 나옵니다.</p>
+    <div class="max-w-2xl mx-auto">
+        <div class="h-screen flex flex-col items-center justify-center">
+            <h1 class="font-extrabold text-2xl">RaonData G2P</h1>
+            <div class="p-4">
+                <input type="text" class="border-2 rounded-lg p-2 m-3">
+                <button class="border-2 rounded-lg p-2 bg-blue-100 hover:bg-blue-200 active:border-blue-300">변환</button>
+            </div>
+            <p class="p-2 font-bold">변환 결과: <span class="font-normal" id="result"></span></p>
+            <p class="text-center text-gray-500 text-xs pt-10">
+                제54회 한국정보통신학회 추계종합학술대회
+            </p>
+            <p class="text-center text-gray-700 text-xs">
+                음성합성 훈련을 위한 형태소 분석 기반 한국어 Grapheme-to-Phoneme 변환기
+            </p>
+        </div>
+    </div>
+    <div>
+    </div>
+    
 </body>
+<footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
+    <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
+      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="https://raondata.ai/" class="hover:underline">RaonData</a>. All Rights Reserved.
+    </span>
+    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
+        <li>
+            <a href="https://raondata.ai" class="mr-4 hover:underline md:mr-6 ">About</a>
+        </li>
+        <li>
+            <a href="mailto:kojunseo@raondata.ai" class="hover:underline">Contact</a>
+        </li>
+    </ul>
+    </div>
+</footer>
+
 <script>
     inputField = document.querySelector('input');
     button = document.querySelector('button');
     answer = document.querySelector('#result');
-    requestUrl = "211.184.190.195:4000/phoneme"
+    requestUrl = "http://211.184.190.195:4000/phoneme?text="
 
     button.addEventListener('click', function() {
         if (inputField.value != "") {
-            // post request as form and get json response
-            fetch(requestUrl, {
-                method: 'POST',
-                body: JSON.stringify({
-                    'text': inputField.value
-                }),
-            }).then(function(response) {
-                return response.json();
-            }).then(function(json) {
-                console.log(json);
-                answer.innerHTML = json['ph_text']
+            input = inputField.value.replace(" ", "%20");
+            fetch(requestUrl+input)
+            .then(response => response.json())
+            .then(data => {
+                answer.innerHTML = data.ph_text;
             })
+        }else{
+            alert("입력된 텍스트가 없습니다.");
+        }
+    })
+    
+    // if press 'enter', then click button
+    inputField.addEventListener('keyup', function(event) {
+        if (event.keyCode === 13) {
+            event.preventDefault();
+            button.click();
         }
     })
 
